--- a/app/style.css
+++ b/app/style.css
@@ -131,6 +131,9 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .setting-color .hash,
 .setting-color .ref     {width:15%;}
 .setting-color input    {width:70%;background:white;border:none;font-size:200%;height:60px;padding:15;color:#666;float:left;}
+.setting-color label    {width:15%;float:left;background:#214E96;font-size:2em;padding: 15 0;
+                        text-align:center;color:white;font-weight:300;height:60px;cursor:pointer;}
+
 
 .color_box              {width:100%;height:10px;box-shadow:0 0 9px 0 #ccc}
 
@@ -170,60 +173,17 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 .text_color_box         {background:#191919}
 .background_color_box   {background:#F2F2F2}
 
+*:-webkit-full-screen {position: fixed;width: 100%;height:100%;top: 0;padding-top:10%;}
+*:-webkit-full-screen .checkbox-button{display:none;}
+*:-webkit-full-screen .checkbox-input{width:100%;line-height: 100%;}
+*:-webkit-full-screen .checkbox-input input{font-size:20vh;width:30%;}
+*:-webkit-full-screen input[disabled] {background:#fff!important;}
+*:-moz-full-screen input[disabled] {background:#fff!important;}
+*:-moz-full-screen {position: fixed;width:100%;height:100%;top:0;padding-top:10%;background-color:rgba(255,255,255,1);}
+*:-moz-full-screen .checkbox-button{display:none;}
+*:-moz-full-screen .checkbox-input{width:100%;line-height: 100%;}
+*:-moz-full-screen .checkbox-input input{font-size:20vh;width:30%;}
 
-*:-webkit-full-screen {
- position: fixed;
- width: 100%;
- height:100%;
- top: 0;
- padding-top:10%;
-}
-
-
-*:-webkit-full-screen .checkbox-button{
- display:none;
-}
-
-*:-webkit-full-screen .checkbox-input{
- width:100%;
- line-height: 100%;
-}
-
-*:-webkit-full-screen .checkbox-input input{
- font-size:20vh;
- width:30%;
-}
-
-*:-webkit-full-screen input[disabled] {
- background:#fff!important;
-}
-
-*:-moz-full-screen input[disabled] {
- background:#fff!important;
-}
-
-*:-moz-full-screen {
- position: fixed;
- width: 100%;
- height:100%;
- top: 0;
- padding-top:10%;
- background-color: rgba(255,255,255,1);
-}
-
-*:-moz-full-screen .checkbox-button{
- display:none;
-}
-
-*:-moz-full-screen .checkbox-input{
- width:100%;
- line-height: 100%;
-}
-
-*:-moz-full-screen .checkbox-input input{
- font-size:20vh;
- width:30%;
-}
 @media (max-width: 720px) {
     /* CORE RESPONSIVE */
     .cookie             {width:100%;line-height:1em;}
