--- a/app/style.css
+++ b/app/style.css
@@ -174,14 +174,26 @@ input[disabled]         {background:#F2F2F2  !important;color:#000  !important}
 .background_color_box   {background:#F2F2F2}
 
 *:-webkit-full-screen {position: fixed;width: 100%;height:100%;top: 0;padding-top:10%;}
-*:-webkit-full-screen .checkbox-button{display:none;}
-*:-webkit-full-screen .checkbox-input{width:100%;line-height: 100%;}
-*:-webkit-full-screen .checkbox-input input{font-size:20vh;width:30%;}
+
+*:-webkit-full-screen .checkbox-button {float:none;position: fixed; width:auto; top:5%; left:50%; -webkit-transform:translateX(-50%);}
+*:-webkit-full-screen .checkbox-button .remove {display:none;}
+*:-webkit-full-screen .checkbox-button a:nth-child(1) {display:block; font-size:200%;}
+
+*:-webkit-full-screen .checkbox-input {width:100%;}
+*:-webkit-full-screen .checkbox-input span {font-size:20vh;width:5%;}
+*:-webkit-full-screen .checkbox-input input{font-size:20vh;width:25%;}
 *:-webkit-full-screen input[disabled] {background:#fff!important;}
+
+
 *:-moz-full-screen input[disabled] {background:#fff!important;}
 *:-moz-full-screen {position: fixed;width:100%;height:100%;top:0;padding-top:10%;background-color:rgba(255,255,255,1);}
-*:-moz-full-screen .checkbox-button{display:none;}
+
+*:-moz-full-screen .checkbox-button {float:none;position: fixed; width:auto; top:5%; left:50%; -moz-transform:translateX(-50%);}
+*:-moz-full-screen .checkbox-button .remove {display:none;}
+*:-moz-full-screen .checkbox-button a:nth-child(1) {display:block;  font-size:200%;}
+
 *:-moz-full-screen .checkbox-input{width:100%;line-height: 100%;}
+*:-moz-full-screen .checkbox-input span {font-size:20vh;width:5%;}
 *:-moz-full-screen .checkbox-input input{font-size:20vh;width:30%;}
 
 @media (max-width: 720px) {
