--- a/app/style.css
+++ b/app/style.css
@@ -42,8 +42,12 @@ input               {outline:none;}
                     /* WIDTH: 100% */
 body                {widows:  100%;background:#F2F2F2;overflow-x:hidden;}
 
+
+.page               {display:block;max-height:0px;opacity:0;min-height:0%;transition: 0.5s;overflow:scroll;overflow-x:hidden;}
+.page.show          {display:block;max-height:100%;opacity:1;min-height:100%;}
+
                     /* WIDTH: 10% */
-nav                 {width:   10%;
+nav                 {width:   10%;z-index:10;
                     float:left;background:#214E96;color:#F2F2F2;transition:width .3s ;overflow:none;position:fixed;}
 
                     /* WIDTH: 15% */
