--- a/app/style.css
+++ b/app/style.css
@@ -95,7 +95,8 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .checkbox-cancel:active,{background:#214E96;color:white;}
 
 .checkbox-plus          {margin:40px 0px 40px 10px;font-size:200%;text-align:center;}
-.checkbox-plus i        {color:#214E96;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 25;}
+.checkbox-plus i        {display:inline-block;transition:all .2s;color:#214E96;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 25;}
+.checkbox-plus i:hover  {transform: scale(1.2,1.2);-moz-transform: scale(1.2,1.2);-webkit-transform: scale(1.3,1.3);}
 
 .checkbox-title         {width:100%;float:left;text-align:center;margin-top:50px;}
 .checkbox-title input   {border:none;border-bottom:5px solid #214E96;border-left:5px solid #214E96;display:inline-table;
@@ -107,7 +108,8 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 .checkbox-input span    {font-size:250%;margin:0 5;}
 
 .checkbox-button        {width:50%;float:left;font-size:250%;margin:35 0px;text-align:center;}
-.checkbox-button i      {color:#214E96;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 15;}
+.checkbox-button i      {display:inline-block;transition:all .2s;color:#214E96;cursor:pointer;font-family: 'Montserrat', sans-serif;margin:0 15;}
+.checkbox-button i:hover{transform: scale(1.2,1.2);-moz-transform: scale(1.2,1.2);-webkit-transform: scale(1.2,1.2);}
 
 .pick                   {width:100%;font-family: 'Montserrat', sans-serif;padding-left:10.5%}
 .pick h3                {margin:25 0;font-size:100%;}
