--- a/app/style.css
+++ b/app/style.css
@@ -43,7 +43,7 @@ input               {outline:none;}
 body                {widows:  100%;background:#F2F2F2;overflow-x:hidden;}
 
 
-.page               {display:block;max-height:0px;opacity:0;min-height:0%;transition: 0.5s;overflow:scroll;overflow-x:hidden;}
+.page               {display:block;max-height:0px;opacity:0;min-height:0%;transition: 0.5s;overflow:auto;overflow-x:hidden;}
 .page.show          {display:block;max-height:100%;opacity:1;min-height:100%;}
 
                     /* WIDTH: 10% */
