--- a/app/style.css
+++ b/app/style.css
@@ -281,8 +281,8 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
 #notlist p          {transition: all .2s;transform:translateX(200%);-webkit-transform:translateX(200%);-moz-transform:translateX(200%);font-weight:bold;padding:10px;color:#fff; margin:4px 0px;}
 #notlist p.show     {transform:translateX(0%);-webkit-transform:translateX(0%);-moz-transform:translateX(0%);}
 #notlist p.hide     {transform:translateY(-200%);-webkit-transform:translateY(-200%);-moz-transform:translateY(-200%);}
-#notlist p.normal   {background:#0000ff;}
-#notlist p.warning  {background:#ff0000;}
+#notlist p.normal   {background:#214E96;}
+#notlist p.warning  {background:#C0392B;}
 
 @media (max-width: 720px) {
     body                {margin-bottom:35px;}
