--- a/app/style.css
+++ b/app/style.css
@@ -12,6 +12,8 @@ html,
 body                {margin:0;padding:0;font-family: 'Montserrat', sans-serif;
                     vertical-align:baseline;line-height:1;color:#191919;overflow-x:hidden;}
 
+/* Extra view fix */
+body                {margin-bottom:25px;}
 
 /* Prevent padding to resize the element.*/
 *,
@@ -109,7 +111,7 @@ header h1               {font-family: 'Montserrat', sans-serif;text-align:center
     .home-group span    {line-height:2em;color:#214E96;text-decoration:underline;}
     .issue              {text-align:center;}
     .issue a            {text-decoration:underline;}
-    
+
 /* <Home */
 
 /* >Time */
